--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -31,6 +31,23 @@ html {
     }
 }
 
+@media only screen and (max-width: 996px) {
+    aside#list > div > h2{
+        font-size: 20px;
+    }
+
+    button.listSelect{
+        font-size: 15px;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    header#titleHeader{
+        justify-content: center;
+    }
+
+}
 
 body{
     background-color: hsla(156, 75%, 17%, 1);
@@ -109,7 +126,7 @@ body{
     flex-direction: column;
     flex-wrap: wrap;
     background-color: hsla(120, 25%, 17%, 1);
-    flex-shrink: 1;
+    flex-shrink: 0;
     width: 15%;
     height: 100vh;
 }
@@ -121,6 +138,7 @@ body{
     justify-content: space-evenly;
     align-items: center;
     height: 100%;
+    max-width: 100%;
 }
 
 .listSelect{
@@ -129,7 +147,7 @@ body{
     width: 100%;
     height: 20%;
     overflow: hidden;
-    font-size: 1.2vw;
+    font-size: 1.2em;
     border: none;
     margin: 0em 0em 0em 0em;
 }
@@ -141,7 +159,7 @@ body{
 }
 
 #list > div >h2{
-    font-size: 2vw;
+    font-size: 2em;
 }
 
 .listSelect:hover{
